--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+# Datasource and JPA config:
+spring.datasource.url=jdbc:mysql://localhost:3306/developers?useSSL=false&serverTimezone=CET
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.format_sql=true
 
+spring.jpa.hibernate.ddl-auto=create
