--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/developers?useSSL=false&serverTimezone=CET
 spring.datasource.username=root
 spring.datasource.password=root
+spring.jpa.show-sql=true
+# pour montrer informations (hibernate, ...) sur le console, concernant le retour de Postman
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
+# none or create
