--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.jpa.show-sql=true
 # pour montrer informations (hibernate, ...) sur le console, concernant le retour de Postman
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.hibernate.ddl-auto=none
-# none or create
+spring.jpa.hibernate.ddl-auto=create
+# none : DB pas effacé au redémarrage de l'application,
+# create : DB effacé mais on peut le modifier.
+# -> après, en temps normal on ne fait pas ça, c'est que pour ce TD :)
